<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.snake.activity.GameOverActivity" >

	<LinearLayout 
	    android:id="@+id/dialog"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/gray"
	    android:orientation="vertical"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_centerInParent="true"
	    >
	    <TextView 
	        android:id="@+id/info"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:textColor="@color/black"
	        android:text="@string/gameOver"/>
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/gray"/>
	    <EditText 
	        android:id="@+id/gameName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        />
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <Button
	            android:id="@+id/ok"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/ok"/>
	        <Button
	            android:id="@+id/cancel"
	            android:layout_weight="1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/cancel"/>
	    </LinearLayout>
	</LinearLayout>
    
</RelativeLayout>
